--- a/JavaWeb/CRUD/web/index.html
+++ b/JavaWeb/CRUD/web/index.html
@@ -1,10 +1,12 @@
-<%@ page import="com.echo.util.JDBCUtil" %>
+<!--<%@ page import="com.echo.util.JDBCUtil" %>
 <%@ page import="com.echo.javabean.Categories" %>
 <%@ page import="java.util.List" %>
 <%@ page import="com.echo.util.ExecuteUtil" %>
-<%@ page contentType="text/html;charset=UTF-8" language="java" %>
+<%@ page contentType="text/html;charset=UTF-8" language="java" %>-->
+<!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>首页</title>
     <style>
         body {
@@ -65,9 +67,9 @@
 <body>
 <h1>所有产品系列</h1>
 <p><a href="javascript:void(0)">新加产品系列</a></p>
-<%
+<!--<%
     List<Categories> all = ExecuteUtil.getAll();
-%>
+%>-->
 <div id="win">
     <div class="winHead">新增产品系列
         <a href="javascript:void(0)" id="cancelWin">关闭</a>
@@ -96,14 +98,14 @@
     </div>
 </div>
 
-<table cellspacing="0px" cellpadding="5px" border="1px" style="margin: auto">
+<table id="showTable" cellspacing="0px" cellpadding="5px" border="1px" style="margin: auto">
     <tr>
         <th>类别编号</th>
         <th>类别名称</th>
         <th colspan="3">类别描述</th>
     </tr>
 
-    <% for (Categories categories : all) { %>
+    <!--<% for (Categories categories : all) { %>
 
     <tr>
         <td><%=categories.getCategoryID()%>
@@ -115,12 +117,32 @@
         <td><a href="#" class="delete">删除</a></td>
         <td><a href="#" class="updata">更新</a></td>
     </tr>
-    <% } %>
+    <% } %>&#45;&#45;%>-->
 </table>
 </body>
 <script src="js/jquery-1.12.4.js"></script>
 <script>
   $(function () {
+    //============================================================页面加载完毕，发送ajax请求数据
+    $.ajax({
+      type: 'POST',
+      url: 'getall',
+      success: function (data) {
+        let parse = JSON.parse(data);
+        console.log(parse)
+        let html = ''
+        $.each(parse,function (i, e) {
+          html += '<tr>'
+          html += '<td>'+e.categoryID+'</td>'
+          html += '<td>'+e.categoryName+'</td>'
+          html += '<td>'+e.description+'</td>'
+          html += '<td><a href="#" class="delete">删除</a></td>'
+          html += '<td><a href="#" class="update">更新</a></td>'
+          html += '</tr>'
+        })
+        $('#showTable').append(html)
+      }
+    })
     //=======================================================================================添加
     //点击弹出模态窗
     $("a:first").click(function () {
@@ -147,7 +169,7 @@
           url: "add",
           data: {CategoryName: CategoryName, Description: Description},
           success: function (data) {
-            window.location.href = "index.jsp"
+            window.location.href = "index.html"
           }
         })
         $("#win").slideUp();
@@ -158,7 +180,7 @@
 
     //=================================================================================================更新
     //点击更新，弹出模态窗
-    $(".updata").click(function () {
+    $("#showTable").on('click','.update',function () {
       parent = $(this).parent().parent();
       let CategoryName = parent.children().get(1).innerHTML;
       let Desription = parent.children().get(2).innerHTML;
@@ -185,7 +207,7 @@
           url: "update",
           data: {categoryid: categoryid, categoryname: categoryname, description: description},
           success: function (data) {
-            window.location.href = "index.jsp"
+            window.location.href = "index.html"
           }
         })
         $("#win").slideUp();
@@ -193,7 +215,7 @@
     })
 
     //=====================================================================删除
-    $(".delete").click(function () {
+    $("#showTable").on('click','.delete',function () {
       if (window.confirm("确认删除?")){
         let innerText = $(this).parent().parent().children().get(0).innerText;
         let index = parseInt(innerText)
@@ -202,7 +224,7 @@
           url : "delete",
           data : { index : index},
           success : function(data){
-            window.location.href = "index.jsp"
+            window.location.href = "index.html"
           }
         })
       }
